# hyper-sentinel-v3

./: .env.example  .gitignore  AGENTIC_FEATURES_AUDIT.md  ARCHITECTURE.md  CAPABILITIES.md  EVOLUTION.md  LICENSE  QA_AUDIT.md  README.md  RECAP.md  api_server.py  computer_use.py  docker-compose.yml  main.py  memory.py  monitors.py  pyproject.toml  sentinel.py  strategy_runner.py  swarm.py  team.py  tool_registry.py  tools.py  trading_mcp.py  webhook_server.py
agents/: __init__.py  analyst.py  risk_manager.py  swarm.py  team.py  trader.py
agents/compliance-agent/: .gitkeep
agents/execution-agent/: .gitkeep
agents/market-agent/: .env.example  Dockerfile  __init__.py  agent.py  config.py  db.py  models.py  requirements.txt  subscriber.py
agents/research-agent/: .gitkeep
agents/risk-agent/: .gitkeep
api/: __init__.py  server.py  webhook.py
automation/: __init__.py  browser.py  computer.py  telegram.py
core/: __init__.py  memory_config.py  missions.py  monitors.py  scheduler.py  sentinel.py  strategy_runner.py  ta_engine.py  tools.py
docker/: docker-compose.yml  nats-server.conf
docs/: 03-mentor-repos-analysis.md  04-implementation-plan.md  API-REFERENCE.md  ARCHITECTURE.md  CAPABILITIES.md  GETTING-STARTED.md  SETUP.md
docs/archive/: 01-hyper-sentinel-concept.md  02-technology-stack.md  04-implementation-plan.md  AGENTIC_FEATURES_AUDIT.md  EVOLUTION.md  (+2 more)
scrapers/: __init__.py  aster_scraper.py  crypto_scraper.py  elfa_scraper.py  fred_scraper.py  hyperliquid_scraper.py  polymarket_scraper.py  x_scraper.py  y2_scraper.py
scripts/: test-publish.sh
